[package]
name = "konwerter-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
konwerter ={ git = "https://github.com/FraI3mega/konwerter.git"}
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
